--- a/index.html
+++ b/index.html
@@ -5,56 +5,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <header>
+<body class="page">
+    <header class="page-header">
         <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="./portfolio.html">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+            <a href="./index.html" class="logo">WebStudio</a>
+            <ul class="site-nav list">
+                <li><a href="" class="link">Studio</a></li>
+                <li><a href="./portfolio.html" class="link">Portfolio</a></li>
+                <li><a href="" class="link">Contacts</a></li>
             </ul>
         </nav>
 
         <address>
-            <ul>
-                <li><a  href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <ul class="contacts list">
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
 
     </header>
     <main>
-            <section>
-                <h1>Effective Solutions for Your Business</h1>
-                <button type="button">Order Service</button>
+            <section class="hero">
+                <h1 hero-title>Effective Solutions for Your Business</h1>
+                <button type="button" class="hero-button">Order Service</button>
             </section>
 
-        <section>
-            <h2>Our Plan</h2>
+        <section class="features">
+            <h2>Features</h2>
             <ul>
                 <li>
-                    <h3>Strategy</h3>
+                    <h3 class="features-title">Strategy</h3>
                     <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li>
-                    <h3>Punctuality</h3>
+                    <h3 class="features-title">Punctuality</h3>
                     <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li>
-                    <h3>Diligence</h3>
+                    <h3 class="features-title">Diligence</h3>
                     <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li>
-                    <h3>Technologies</h3>
+                    <h3 class="features-title">Technologies</h3>
                     <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
         </section>
 
-        <section>
-            <h2>What are we doing</h2>
+        <section class="works">
+            <h2 class="works-title">What are we doing</h2>
             <ul>
                 <li><img src="./images/Rectangle71.jpg" width="360" height="300" alt="laptop"></li>
                 <li><img src="./images/Rectangle72.jpg" width="360" height="300" alt="screens"></li>
@@ -62,8 +63,8 @@
             </ul>
         </section>
 
-        <section>
-            <h2>Our Team</h2>
+        <section class="team">
+            <h2 class="team-members">Our Team</h2>
             <ul>
                 <li>
                     <img src="./images/Mark.jpg" width="264" height="260" alt="Mark Guerrero">
@@ -88,8 +89,8 @@
             </ul>
         </section>
     </main>
-    <footer>
-        <a href="./index.html">WebStudio</a>
+    <footer class="page-footer">
+        <a href="./index.html class="logo"">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
