--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html">WebStudio</a>
+            <a href="./index.html" class="logo">WebStudio</a>
             <ul>
                 <li><a href="">Studio</a></li>
                 <li><a href="./portfolio.html">Portfolio</a></li>
@@ -71,7 +71,7 @@
             </li>
 
             <li>
-                <img src="./images/Portfolio/online courses.jpg" width="360" height="300" alt="banking app interface">
+                <img src="./images/Portfolio/onlinecourses.jpg" width="360" height="300" alt="banking app interface">
                 <h3>Online Courses</h3>
                 <p>Marketing</p>
             </li>
@@ -81,15 +81,15 @@
                 <h3>Instagram Stories Concept</h3>
                 <p>Design</p>
             </li>
-            
+
             <li>
-                <img src="./images/Portfolio/organic foot.jpg" width="360" height="300" alt="banking app interface">
+                <img src="./images/Portfolio/organicfood.jpg" width="360" height="300" alt="banking app interface">
                 <h3>Organic Food</h3>
                 <p>Web Site</p>
             </li>
 
             <li>
-                <img src="./images/Portfolio/fresh coffee.jpg" width="360" height="300" alt="banking app interface">
+                <img src="./images/Portfolio/freshcoffee.jpg" width="360" height="300" alt="banking app interface">
                 <h3>Fresh Coffee</h3>
                 <p>Web Site</p>
             </li>
