--- a/portfolio.html
+++ b/portfolio.html
@@ -5,35 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
-<body>
-    <header>
+<body class="page">
+    <header class="page-header">
         <nav>
             <a href="./index.html" class="logo">WebStudio</a>
             <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="./portfolio.html">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+                <li><a href="./index.html" class="link">Studio</a></li>
+                <li><a href="./portfolio.html" class="link">Portfolio</a></li>
+                <li><a href="" class="link">Contacts</a></li>
             </ul>
         </nav>
 
-        <address>
+        <address class="contacts list">
             <ul>
-                <li><a  href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
 
     </header>
 <main>
-    <section>
-        <h2>List of topics</h2>
+    <section class="filters">
+        <h2 class="section">Filters</h2>
         <ul>
-            <li><a href="">All</a></li>
-            <li><a href="">Web Site</a></li>
-            <li><a href="">App</a></li>
-            <li><a href="">Design</a></li>
-            <li><a href="">Marketing</a></li>
+            <li><button type="button" class="filter active-button">All</button></li>
+            <li><button type="button" class="filter">Web Site</button></li>
+            <li><button type="button" class="filter">App</button></li>
+            <li><button type="button" class="filter">Design</button></li>
+            <li><button type="button" class="filter">Marketing</button></li>
         </ul>
     </section>
 
