--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="page">
     <header class="page-header">
         <nav>
-            <a href="./index.html" class="logo">WebStudio</a>
+            <a href="./index.html" class="logo"><span>Web</span>Studio</a>
             <ul class="site-nav list">
                 <li><a href="" class="link">Studio</a></li>
                 <li><a href="./portfolio.html" class="link">Portfolio</a></li>
@@ -90,7 +90,7 @@
         </section>
     </main>
     <footer class="page-footer">
-        <a href="./index.html" class=logo">WebStudio</a>
+        <a href="./index.html" class="logo"><span>Web</span>Studio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
