--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
 <body class="page">
     <header class="page-header">
         <nav>
-            <a href="./index.html" class="logo">WebStudio</a>
+            <a href="./index.html" class="logo"><span>Web</span>Studio</a>
             <ul>
                 <li><a href="./index.html" class="link">Studio</a></li>
                 <li><a href="./portfolio.html" class="link">Portfolio</a></li>
@@ -101,7 +101,7 @@
 
 </main>
     <footer>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="logo"><span>Web</span>Studio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
