--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 
 </head>
@@ -12,8 +15,8 @@
     <header class="page-header">
         <nav>
             <a href="./index.html" class="logo"><span>Web</span>Studio</a>
-            <ul>
-                <li><a href="./index.html" class="link">Studio</a></li>
+            <ul class="site-nav list">
+                <li><a href="" class="link">Studio</a></li>
                 <li><a href="./portfolio.html" class="link">Portfolio</a></li>
                 <li><a href="" class="link">Contacts</a></li>
             </ul>
@@ -100,9 +103,9 @@
     </section>
 
 </main>
-    <footer>
-        <a href="./index.html" class="logo"><span>Web</span>Studio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-    </footer>
+<footer class="page-footer">
+    <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+</footer>
 </body>
 </html>
