--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         <nav>
             <a href="./index.html" class="logo"><span>Web</span>Studio</a>
             <ul class="site-nav list">
-                <li><a href="" class="link">Studio</a></li>
+                <li><a href="./index.html" class="link">Studio</a></li>
                 <li><a href="./portfolio.html" class="link">Portfolio</a></li>
                 <li><a href="" class="link">Contacts</a></li>
             </ul>
         </nav>
 
-        <address class="contacts list">
-            <ul>
+        <address class="contacts">
+            <ul class="list">
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
@@ -31,7 +31,7 @@
     </header>
     <main>
             <section class="hero">
-                <h1 hero-title>Effective Solutions for Your Business</h1>
+                <h1 hero-title>Effective Solutions<br>for Your Business</h1>
                 <button type="button" class="hero-button">Order Service</button>
             </section>
 
