--- a/portfolio.html
+++ b/portfolio.html
@@ -16,14 +16,14 @@
         <nav>
             <a href="./index.html" class="logo"><span>Web</span>Studio</a>
             <ul class="site-nav list">
-                <li><a href="" class="link">Studio</a></li>
+                <li><a href="./index.html" class="link">Studio</a></li>
                 <li><a href="./portfolio.html" class="link">Portfolio</a></li>
                 <li><a href="" class="link">Contacts</a></li>
             </ul>
         </nav>
 
-        <address class="contacts list">
-            <ul>
+        <address class="contacts">
+            <ul class="list">
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
@@ -33,7 +33,7 @@
 <main>
     <section class="filters">
         <h2 class="section">Filters</h2>
-        <ul>
+        <ul class="list">
             <li><button type="button" class="filter active-button">All</button></li>
             <li><button type="button" class="filter">Web Site</button></li>
             <li><button type="button" class="filter">App</button></li>
