--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="main.css/styles.css">
 
 </head>
 <body class="page">
@@ -32,74 +32,70 @@
     </header>
 <main>
     <section class="filters">
-        <h2 class="section">Filters</h2>
+        <h1 class="section secret-name">Filters</h1>
         <ul class="list">
             <li><button type="button" class="filter active-button">All</button></li>
-            <li><button type="button" class="filter">Web Site</button></li>
-            <li><button type="button" class="filter">App</button></li>
-            <li><button type="button" class="filter">Design</button></li>
-            <li><button type="button" class="filter">Marketing</button></li>
+            <li><button type="button" class="filter active-button">Web Site</button></li>
+            <li><button type="button" class="filter active-button">App</button></li>
+            <li><button type="button" class="filter active-button">Design</button></li>
+            <li><button type="button" class="filter active-button">Marketing</button></li>
         </ul>
-    </section>
-
-    <section>
-        <h2>Examples</h2>
-        <ul>
+        <h2 class="secret-name title-2">Examples</h2>
+        <ul class="list">
             <li>
-                <img src="./images/Portfolio/banking.jpg" width="360" height="300" alt="banking app interface">
+                <a><img src="./images/Portfolio/banking.jpg" width="360" height="300" alt="banking app interface"></a>
                 <h3>Banking App Interface Concept</h3>
                 <p>App</p>
             </li>
 
             <li>
-                <img src="./images/Portfolio/cashless.jpg" width="360" height="300" alt="banking app interface">
+                <a><img src="./images/Portfolio/cashless.jpg" width="360" height="300" alt="banking app interface"></a>
                 <h3>Cashless Payment</h3>
                 <p>Marketing</p>
             </li>
 
             <li>
-                <img src="./images/Portfolio/meditaion.jpg" width="360" height="300" alt="banking app interface">
+                <a><img src="./images/Portfolio/meditaion.jpg" width="360" height="300" alt="banking app interface"></a>
                 <h3>Meditaion App</h3>
                 <p>App</p>
             </li>
 
             <li>
-                <img src="./images/Portfolio/taxi.jpg" width="360" height="300" alt="banking app interface">
+                <a><img src="./images/Portfolio/taxi.jpg" width="360" height="300" alt="banking app interface"></a>
                 <h3>Taxi Service</h3>
                 <p>Marketing</p>
             </li>
 
             <li>
-                <img src="./images/Portfolio/illustrations.jpg" width="360" height="300" alt="banking app interface">
+                <a><img src="./images/Portfolio/illustrations.jpg" width="360" height="300" alt="banking app interface"></a>
                 <h3>Screen Illustrations</h3>
                 <p>Design</p>
             </li>
 
             <li>
-                <img src="./images/Portfolio/onlinecourses.jpg" width="360" height="300" alt="banking app interface">
+                <a><img src="./images/Portfolio/onlinecourses.jpg" width="360" height="300" alt="banking app interface"></a>
                 <h3>Online Courses</h3>
                 <p>Marketing</p>
             </li>
 
             <li>
-                <img src="./images/Portfolio/instagram.jpg" width="360" height="300" alt="banking app interface">
+                <a><img src="./images/Portfolio/instagram.jpg" width="360" height="300" alt="banking app interface"></a>
                 <h3>Instagram Stories Concept</h3>
                 <p>Design</p>
             </li>
 
             <li>
-                <img src="./images/Portfolio/organicfood.jpg" width="360" height="300" alt="banking app interface">
+                <a><img src="./images/Portfolio/organicfood.jpg" width="360" height="300" alt="banking app interface"></a>
                 <h3>Organic Food</h3>
                 <p>Web Site</p>
             </li>
 
             <li>
-                <img src="./images/Portfolio/freshcoffee.jpg" width="360" height="300" alt="banking app interface">
+                <a><img src="./images/Portfolio/freshcoffee.jpg" width="360" height="300" alt="banking app interface"></a>
                 <h3>Fresh Coffee</h3>
                 <p>Web Site</p>
             </li>
         </ul>
-
     </section>
 
 </main>
