--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="main.css/styles.css">
 </head>
 <body class="page">
     <header class="page-header">
@@ -31,35 +31,35 @@
     </header>
     <main>
             <section class="hero">
-                <h1 hero-title>Effective Solutions<br>for Your Business</h1>
+                <h1 class="hero-title">Effective Solutions<br>for Your Business</h1>
                 <button type="button" class="hero-button">Order Service</button>
             </section>
 
         <section class="features">
-            <h2>Features</h2>
-            <ul>
+            <h2 class="title-2 secret-name">Features</h2>
+            <ul class="list">
                 <li>
-                    <h3 class="features-title section">Strategy</h3>
+                    <h3 class="features-title section title-3">Strategy</h3>
                     <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li>
-                    <h3 class="features-title section">Punctuality</h3>
+                    <h3 class="features-title section title-3">Punctuality</h3>
                     <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li>
-                    <h3 class="features-title section">Diligence</h3>
+                    <h3 class="features-title section title-3">Diligence</h3>
                     <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li>
-                    <h3 class="features-title section">Technologies</h3>
+                    <h3 class="features-title section title-3">Technologies</h3>
                     <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
         </section>
 
         <section class="works">
-            <h2 class="works-title">What are we doing</h2>
-            <ul>
+            <h2 class="works-title title-2">What are we doing</h2>
+            <ul class="list">
                 <li><img src="./images/Rectangle71.jpg" width="360" height="300" alt="laptop"></li>
                 <li><img src="./images/Rectangle72.jpg" width="360" height="300" alt="screens"></li>
                 <li><img src="./images/img3.jpg" width="360" height="300" alt="iphone"></li>
@@ -67,26 +67,26 @@
         </section>
 
         <section class="team">
-            <h2 class="team-members section">Our Team</h2>
-            <ul>
+            <h2 class="team-members section title-2">Our Team</h2>
+            <ul class="list">
                 <li>
                     <img src="./images/Mark.jpg" width="264" height="260" alt="Mark Guerrero">
-                    <h3 class="section">Mark Guerrero</h3>
+                    <h3 class="section title-3">Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/Tom.jpg" width="264" height="260" alt="Tom Ford">
-                    <h3 class="section">Tom Ford</h3>
+                    <h3 class="section title-3">Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/Camila.jpg" width="264" height="260" alt="Camila Garcia">
-                    <h3 class="section">Camila Garcia</h3>
+                    <h3 class="section title-3">Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
                     <img src="./images/Daniel.jpg" width="264" height="260" alt="Daniel Wilson">
-                    <h3 class="section">Daniel Wilson</h3>
+                    <h3 class="section title-3">Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
